# pyaddlicense

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pyaddlicense/: main.py
tests/: pyaddlicense_test.py
