[project]
name = "pyaddlicense"
version = "0.3.0"
description = "Add a license to any source file that does not have one."
authors = [{ name = "Mikey Coward", email = "pyaddlicense@kixa.me" }]
requires-python = "~=3.7"
readme = "README.md"
dependencies = ["pathspec>=0.9.0", "rich>=12.0.0"]

[project.urls]
Homepage = "https://github.com/helsing-ai/pyaddlicense"
Repository = "https://github.com/helsing-ai/pyaddlicense"
Issues = "https://github.com/helsing-ai/pyaddlicense/issues"

[project.scripts]
pyaddlicense = "pyaddlicense.main:main"

[dependency-groups]
dev = ["mypy>=1.4.1", "pytest>=7.2.2", "ruff>=0.9.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
check_untyped_defs = true
disallow_any_unimported = true
disallow_untyped_defs = true
enable_error_code = ["ignore-without-code"]
no_implicit_optional = true
show_error_codes = true
strict = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false
