[project]
name = "pyaddlicense"
version = "0.3.0"
description = "Add a license to any source file that does not have one."
authors = [{ name = "Mikey Coward", email = "pyaddlicense@kixa.me" }]
requires-python = "~=3.7"
readme = "README.md"
dependencies = ["pathspec>=0.9.0", "rich>=12.0.0"]

[project.urls]
Homepage = "https://github.com/helsing-ai/pyaddlicense"
Repository = "https://github.com/helsing-ai/pyaddlicense"
Issues = "https://github.com/helsing-ai/pyaddlicense/issues"

[project.scripts]
pyaddlicense = "pyaddlicense.main:main"

[dependency-groups]
dev = ["pytest>=7.2.2", "ruff>=0.9.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.ruff.lint.isort]
split-on-trailing-comma = false
